--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>User page</title>
 </head>
 <body>
 
 <header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#">alex112@gmail.com <small> with roles : USER</small></a>
+        <a class="navbar-brand" href="#"><h4>alex112@gmail.com <small> with roles : USER</small></h4></a>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
             </ul>
@@ -23,24 +23,17 @@
         </div>
     </nav>
 </header>
-<div class="left-container">
+<div class="container-fluid" style="background-color: ghostwhite; padding-left: 0">
     <br><br>
     <!--    левый блок -->
     <div class="row">
-        <div class="col-2" style="background-color: white">
-            <br>
-            <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">User</a>
-                <!--                <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false">Profile</a>-->
-                <!--                <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab" aria-controls="v-pills-messages" aria-selected="false">Messages</a>-->
-                <!--                <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" role="tab" aria-controls="v-pills-settings" aria-selected="false">Settings</a>-->
-
+        <div class="col-2">
+            <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical" style="background-color: white; min-height: 1000px">
+                <br>
+                <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#" role="tab"
+                   aria-controls="v-pills-home" aria-selected="true">User</a>
             </div>
-
-            <!--            <button class="btn btn-primary btn-block" role="button">User</button>-->
-            <!--            <button class="btn btn btn-block" role="button">User</button>-->
         </div>
-        <!--        Table todo foreach-->
         <div class="col" style="background-color: ghostwhite">
             <br>
             <h1>User information-page</h1>
@@ -60,9 +53,6 @@
                                 <td><h5>Age</h5></td>
                                 <td><h5>Email</h5></td>
                                 <td><h5>Role</h5></td>
-                                <!--                                <td><a href="#" class="btn btn-info" role="button">Edit</a></td>-->
-                                <!--                                <td><a href="#" class="btn btn-danger" role="button">Delete</a></td>-->
-                                <!--                                                                <td><button class="btn btn-danger" role="button">Delete</button> </td>-->
                             </tr>
                             </thead>
                             <tbody>
