--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+    <link rel="icon" href="https://img.icons8.com/color/452/spring-logo.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="https://img.icons8.com/color/452/spring-logo.png" type="image/x-icon" />
+
     <title>User page</title>
 </head>
 <body>
