--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,387 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+<!--    <link rel="icon" href="https://img.icons8.com/color/452/spring-logo.png" type="image/x-icon"/>-->
+    <link rel="shortcut icon" href="https://img.icons8.com/color/452/spring-logo.png" type="image/x-icon"/>
+
+    <title>Admin panel</title>
 </head>
 <body>
 
+<header>
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+        <a class="navbar-brand" href="#"><h4>alex112@gmail.com <small> with roles : USER</small></h4></a>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav mr-auto">
+            </ul>
+            <button class="btn btn-link" style="color: darkgray">Logout</button>
+        </div>
+    </nav>
+</header>
+<div class="container-fluid" style="padding-left: 0">
+    <br><br>
+    <!--    левый блок -->
+    <div class="row">
+        <div class="col-2" style="background-color: ghostwhite">
+            <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical"
+                 style="background-color: white; min-height: 1000px">
+                <br>
+                <a class="nav-link active" id="v-pills-admin-tab" data-toggle="pill" href="#v-pills-admin" role="tab"
+                   aria-controls="v-pills-home" aria-selected="true">Admin</a>
+                <a class="nav-link" id="v-pills-admin-user-tab" data-toggle="pill" href="#v-pills-admin-user" role="tab"
+                   aria-controls="v-pills-profile" aria-selected="false">User </a>
+            </div>
+        </div>
+        <!--        правый блок-->
+        <!--        Table todo foreach-->
+        <div class="tab-content col-10" style="background-color: ghostwhite; min-height: 900px">
+            <div class="tab-pane active" id="v-pills-admin" role="tabpanel" aria-labelledby="v-pills-admin-tab">
+                <br>
+                <h1>Admin panel</h1>
+                <br>
+                <ul class="nav nav-tabs">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#users-table" data-toggle="tab">Users table</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#new-user" data-toggle="tab">New User</a>
+                    </li>
+                </ul>
+                <div class="tab-content">
+                    <!--    все юзеры-->
+                    <div class="tab-pane active" id="users-table" style="background-color: ghostwhite">
+                        <div class="card">
+                            <div class="card-header">
+                                <h3>All users</h3>
+                            </div>
+                            <div class="card-body"  id="allUsersTable">
+                                <div class="table-responsive">
+                                    <table class="table table-striped table-hover">
+                                        <thead>
+                                        <tr>
+                                            <td><h5>ID</h5></td>
+                                            <td><h5>First Name</h5></td>
+                                            <td><h5>Last Name</h5></td>
+                                            <td><h5>Age</h5></td>
+                                            <td><h5>Email</h5></td>
+                                            <td><h5>Role</h5></td>
+                                            <td><h5>Edit</h5></td>
+                                            <td><h5>Delete</h5></td>
+                                        </tr>
+                                        </thead>
+                                        <tbody id="user">
+
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--    новый юзер-->
+                    <div class="tab-pane" id="new-user">
+                        <div class="card">
+                            <div class="card-header">
+                                <h3>Add new user</h3>
+                            </div>
+                            <div class="card-body">
+                                <form>
+                                    <div class="form-group text-center">
+                                        <label for="newUserFirstName" class="form-label"><h5>First Name</h5></label>
+                                        <div class="row">
+                                            <div class="col-4"></div>
+                                            <input class="form-control col-4" id="newUserFirstName"
+                                                   placeholder="First name">
+                                            <div class="col-4"></div>
+                                        </div>
+                                        <br>
+                                        <label for="newUserLastName" class="form-label"><h5>Last Name</h5></label>
+                                        <div class="row">
+                                            <div class="col-4"></div>
+                                            <input class="form-control col-4" id="newUserLastName"
+                                                   placeholder="Last name">
+                                            <div class="col-4"></div>
+                                        </div>
+                                        <br>
+                                        <label for="newUserAge" class="form-label"><h5>Age</h5></label>
+                                        <div class="row">
+                                            <div class="col-4"></div>
+                                            <input type="number" class="form-control col-4" id="newUserAge"
+                                                   placeholder="Age">
+                                            <div class="col-4"></div>
+                                        </div>
+                                        <br>
+                                        <label for="newUserEmail" class="form-label"><h5>Email</h5></label>
+                                        <div class="row">
+                                            <div class="col-4"></div>
+                                            <input type="email" class="form-control col-4" id="newUserEmail"
+                                                   placeholder="Email">
+                                            <div class="col-4"></div>
+                                        </div>
+                                        <br>
+                                        <label for="newUserPassword" class="form-label"><h5>Password</h5></label>
+                                        <div class="row">
+                                            <div class="col-4"></div>
+                                            <input type="password" class="form-control col-4" id="newUserPassword"
+                                                   placeholder="Password">
+                                            <div class="col-4"></div>
+                                        </div>
+                                        <br>
+                                        <label for="newUserRole"><h5>Role</h5></label>
+                                        <div class="row">
+                                            <div class="col-4"></div>
+                                            <select multiple class="form-control col-4" id="newUserRole" size="2">
+                                                <option value="ROLE_ADMIN">ADMIN</option>
+                                                <option value="ROLE_USER">USER</option>
+                                            </select>
+                                            <div class="col-4"></div>
+                                        </div>
+                                        <br>
+                                        <button type="button" id="createNewUser" onclick="addNewUser()" class="btn btn-success btn-lg">Add new
+                                            user
+                                        </button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="tab-pane" id="v-pills-admin-user" role="tabpanel"
+                 aria-labelledby="v-pills-admin-user-tab">
+                <br>
+                <h1>User information-page</h1>
+                <br>
+                <div class="card">
+                    <div class="card-header">
+                        <h3>About user</h3>
+                    </div>
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            <table class="table table-striped table-hover">
+                                <thead>
+                                <tr>
+                                    <td><h5>ID</h5></td>
+                                    <td><h5>First Name</h5></td>
+                                    <td><h5>Last Name</h5></td>
+                                    <td><h5>Age</h5></td>
+                                    <td><h5>Email</h5></td>
+                                    <td><h5>Role</h5></td>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <td>1</td>
+                                    <td>Alex</td>
+                                    <td>Adams</td>
+                                    <td>25</td>
+                                    <td>alex112@gmail.com</td>
+                                    <td>USER</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--модальное окно-->
+<!--todo-->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Edit user</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="form-group text-center">
+                        <label for="id" class="form-label"><h5>ID</h5></label>
+                        <fieldset disabled>
+                            <div class="row">
+                                <div class="col-3"></div>
+                                <input class="form-control col-6" id="id" placeholder="ID">
+                                <div class="col-3"></div>
+                            </div>
+                        </fieldset>
+                        <br>
+                        <label for="first-name" class="form-label"><h5>First Name</h5></label>
+                        <div class="row">
+                            <div class="col-3"></div>
+                            <input class="form-control col-6" id="first-name">
+                            <div class="col-3"></div>
+                        </div>
+                        <br>
+                        <label for="last-name" class="form-label"><h5>Last Name</h5></label>
+                        <div class="row">
+                            <div class="col-3"></div>
+                            <input class="form-control col-6" id="last-name">
+                            <div class="col-3"></div>
+                        </div>
+                        <br>
+                        <label for="age" class="form-label"><h5>Age</h5></label>
+                        <div class="row">
+                            <div class="col-3"></div>
+                            <input type="number" class="form-control col-6" id="age">
+                            <div class="col-3"></div>
+                        </div>
+                        <br>
+                        <label for="email" class="form-label"><h5>Email</h5></label>
+                        <div class="row">
+                            <div class="col-3"></div>
+                            <input type="email" class="form-control col-6" id="email">
+                            <div class="col-3"></div>
+                        </div>
+                        <br>
+                        <label for="password" class="form-label"><h5>Password</h5></label>
+                        <div class="row">
+                            <div class="col-3"></div>
+                            <input type="password" class="form-control col-6" id="password">
+                            <div class="col-3"></div>
+                        </div>
+                        <br>
+                        <label for="role"><h5>Role</h5></label>
+                        <div class="row">
+                            <div class="col-3"></div>
+                            <select multiple class="form-control col-6" id="role" size="2">
+                                <option value="ROLE_ADMIN">ADMIN</option>
+                                <option value="ROLE_USER">USER</option>
+                            </select>
+                            <div class="col-3"></div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Edit</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script
+        src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+<script type="text/javascript">
+    function showUsers (){
+        $(function (){
+            var $user = $('#user');
+            $.ajax({
+                type: 'GET',
+                url: 'get',
+                dataType: 'json',
+                contentType: 'application/json',
+                success: function (users) {
+                    console.log("Data connected!", users)
+                    var userRole;
+
+                    $.each(users, function (i, user) {
+                        if(user.authorities[0].role === 'ROLE_ADMIN' && user.authorities[1].role === 'ROLE_USER') {
+                            userRole = 'ADMIN USER'
+                        } else {
+                            userRole = 'USER'
+                        }
+                        $user.append('<tr><td>' + user.id +
+                            '</td><td>' + user.firstName +
+                            '</td><td>' + user.lastName +
+                            '</td><td>' + user.age +
+                            '</td><td>' + user.email +
+                            '</td><td>' + userRole +
+                            '</td><td>' +
+                            '<button class="btn btn-info" role="button" data-toggle="modal"' +
+                            ' data-target="#exampleModal">Edit</button>' +
+                            '</td>' +
+                            '<td>' +
+                            '<button class="btn btn-danger" role="button" data-toggle="modal"' +
+                            ' data-target="#exampleModal" onclick="deleteUser(user.id)">Delete</button></td></tr>' )
+                    })
+                }
+            })
+        });
+
+    }
+
+    $(document).ready(function () {
+        console.log("Ready!")
+        showUsers();
+    })
+
+    function addNewUser() {
+        if ($('#newUserRole').val() === 'ROLE_ADMIN') {
+            $.ajax({
+                url: 'create/admin',
+                dataType: 'json',
+                method: 'POST',
+                cache: false,
+                contentType: 'application/json',
+                data: JSON.stringify({
+                    firstName: $("#newUserFirstName").val(),
+                    lastName: $("#newUserLastName").val(),
+                    age: $("#newUserAge").val(),
+                    email: $("#newUserEmail").val(),
+                    password: $("#newUserPassword").val(),
+
+                }),
+                success: function (data) {
+                    showUsers()
+                }
+
+            })
+        } else {
+            $.ajax({
+                url: 'create/user',
+                dataType: 'json',
+                method: 'POST',
+                cache: false,
+                contentType: 'application/json',
+                data: JSON.stringify({
+                    firstName: $("#newUserFirstName").val(),
+                    lastName: $("#newUserLastName").val(),
+                    age: $("#newUserAge").val(),
+                    email: $("#newUserEmail").val(),
+                    password: $("#newUserPassword").val()
+                }),
+                success: function (data) {
+                    showUsers()
+                }
+            })
+
+        }
+    }
+
+    function deleteUser(id) {
+        $.ajax({
+            url: id,
+            method: 'DELETE',
+            success: function (){
+                showUsers()
+            }
+        })
+
+    }
+</script>
 </body>
 </html>
