--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -66,12 +66,14 @@
                                     <table class="table table-striped table-hover">
                                         <thead>
                                         <tr>
+                                            <td><h5>Photo</h5></td>
                                             <td><h5>ID</h5></td>
                                             <td><h5>First Name</h5></td>
                                             <td><h5>Last Name</h5></td>
                                             <td><h5>Age</h5></td>
                                             <td><h5>Email</h5></td>
                                             <td><h5>Role</h5></td>
+                                            <td><h5>Vk id</h5></td>
                                             <td><h5>Edit</h5></td>
                                             <td><h5>Delete</h5></td>
                                         </tr>
@@ -112,6 +114,10 @@
                                         <input type="password" class="form-control" id="newUserPassword"
                                                placeholder="Password" required>
                                         <br>
+                                        <label for="newUserVkId" class="form-label"><h5>Vk id</h5></label>
+                                        <input type="text" class="form-control" id="newUserVkId"
+                                               placeholder="Vk id" required>
+                                        <br>
                                         <label for="newUserRole"><h5>Role</h5></label>
                                         <select multiple class="form-control" id="newUserRole" size="2" required>
                                             <option value="ROLE_ADMIN">ADMIN</option>
@@ -142,12 +148,14 @@
                             <table class="table table-striped table-hover">
                                 <thead>
                                 <tr>
+                                    <td><h5>Photo</h5></td>
                                     <td><h5>ID</h5></td>
                                     <td><h5>First Name</h5></td>
                                     <td><h5>Last Name</h5></td>
                                     <td><h5>Age</h5></td>
                                     <td><h5>Email</h5></td>
                                     <td><h5>Role</h5></td>
+                                    <td><h5>Vk id</h5></td>
                                 </tr>
                                 </thead>
                                 <tbody id="currentUser"></tbody>
@@ -191,6 +199,9 @@
                         <br>
                         <label for="editUserEmail" class="form-label"><h5>Email</h5></label>
                         <input type="email" class="form-control" id="editUserEmail" required>
+                        <br>
+                        <label for="editUserVkId" class="form-label"><h5>Vk id</h5></label>
+                        <input type="text" class="form-control" id="editUserVkId" required>
                         <br>
                         <label for="editUserPassword" class="form-label"><h5>Password</h5></label>
                         <input type="password" class="form-control" id="editUserPassword" required>
@@ -250,6 +261,11 @@
                             <input type="email" class="form-control" id="deleteUserEmail">
                         </fieldset>
                         <br>
+                        <label for="deleteUserVkId" class="form-label"><h5>Vk id</h5></label>
+                        <fieldset disabled>
+                            <input type="text" class="form-control" id="deleteUserVkId">
+                        </fieldset>
+                        <br>
                         <label for="deleteUserRole"><h5>Role</h5></label>
                         <fieldset disabled>
                             <select multiple class="form-control" id="deleteUserRole" size="2">
@@ -298,12 +314,14 @@
                     } else {
                         userRole = 'USER'
                     }
-                    table.append('<tr><td id="IdValue' + user.id + '">' + user.id +
+                    table.append('<tr><td id="tableUserPhoto' + user.id + '">' +
+                        '</td><td id="IdValue' + user.id + '">' + user.id +
                         '</td><td id="FirstNameValue' + user.id + '">' + user.firstName +
                         '</td><td id="LastNameValue' + user.id + '">' + user.lastName +
                         '</td><td id="AgeValue' + user.id + '">' + user.age +
                         '</td><td id="EmailValue' + user.id + '">' + user.email +
                         '</td><td id="RoleValue' + user.id + '">' + userRole +
+                        '</td><td id="VkIdValue' + user.id + '">' + user.vkId +
                         '</td><td>' +
                         '<button class="btn btn-info" role="button" data-toggle="modal"' +
                         ' data-target="#editModal" onclick="editButton(' + user.id + ')">Edit</button>' +
@@ -311,6 +329,7 @@
                         '<td>' +
                         '<button class="btn btn-danger" role="button" data-toggle="modal"' +
                         ' data-target="#deleteModal" onclick="deleteButton(' + user.id + ')">Delete</button></td></tr>')
+                    getVkPhoto(user.vkId, $('#tableUserPhoto' + user.id))
                 })
             }
         })
@@ -344,13 +363,15 @@
                     userInfo.addClass("active")
                 }
                 header.append('<h4>' + user.email + '<small> with roles : ' + userRole + '</small></h4>');
-                userTable.append('<tr><td>' + user.id +
+                userTable.append('<tr><td id="userPhoto"></td><td>' + user.id +
                     '</td><td>' + user.firstName +
                     '</td><td>' + user.lastName +
                     '</td><td>' + user.age +
                     '</td><td>' + user.email +
                     '</td><td>' + userRole +
+                    '</td><td>' + user.vkId +
                     '</td></tr>');
+                getVkPhoto(user.vkId, $('#userPhoto'))
             }
         })
     }
@@ -372,7 +393,8 @@
                 lastName: $("#newUserLastName").val(),
                 age: $("#newUserAge").val(),
                 email: $("#newUserEmail").val(),
-                password: $("#newUserPassword").val()
+                password: $("#newUserPassword").val(),
+                vkId: $("#newUserVkId").val()
             }),
             success: function () {
                 showUsers()
@@ -388,6 +410,7 @@
         document.getElementById("deleteUserLastName").placeholder = document.getElementById("LastNameValue" + id).innerText;
         document.getElementById("deleteUserAge").placeholder = document.getElementById("AgeValue" + id).innerText;
         document.getElementById("deleteUserEmail").placeholder = document.getElementById("EmailValue" + id).innerText;
+        document.getElementById("deleteUserVkId").placeholder = document.getElementById("VkIdValue" + id).innerText;
         document.getElementById("deleteForm").onsubmit = function () {
             $.ajax({
                 url: id,
@@ -405,6 +428,7 @@
         document.getElementById("editUserLastName").value = document.getElementById("LastNameValue" + id).innerText;
         document.getElementById("editUserAge").value = document.getElementById("AgeValue" + id).innerText;
         document.getElementById("editUserEmail").value = document.getElementById("EmailValue" + id).innerText;
+        document.getElementById("editUserVkId").value = document.getElementById("VkIdValue" + id).innerText;
         document.getElementById("editForm").onsubmit = function () {
             $.ajax({
                 url: document.getElementById("editUserRole").value,
@@ -418,13 +442,28 @@
                     lastName: $("#editUserLastName").val(),
                     age: $("#editUserAge").val(),
                     email: $("#editUserEmail").val(),
-                    password: $("#editUserPassword").val()
+                    password: $("#editUserPassword").val(),
+                    vkId: $("#editUserVkId").val()
                 }),
                 success: function () {
                     showUsers()
                 }
             })
         };
+    }
+
+
+
+    function getVkPhoto(vkId, place) {
+        $.ajax({
+            type: 'GET',
+            url: 'getVkInfo/' + vkId,
+            dataType: 'json',
+            contentType: 'application/json',
+            success: function (img) {
+                place.append('<img src="' + img.response[0].photo_50 + '">')
+            }
+        })
     }
 
     function logout() {
