--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -115,7 +115,7 @@
                                                placeholder="Password" required>
                                         <br>
                                         <label for="newUserVkId" class="form-label"><h5>Vk id</h5></label>
-                                        <input type="text" class="form-control" id="newUserVkId"
+                                        <input type="number" class="form-control" id="newUserVkId"
                                                placeholder="Vk id" required>
                                         <br>
                                         <label for="newUserRole"><h5>Role</h5></label>
@@ -203,7 +203,7 @@
                         <input type="email" class="form-control" id="editUserEmail" required>
                         <br>
                         <label for="editUserVkId" class="form-label"><h5>Vk id</h5></label>
-                        <input type="text" class="form-control" id="editUserVkId" required>
+                        <input type="number" class="form-control" id="editUserVkId" required>
                         <br>
                         <label for="editUserPassword" class="form-label"><h5>Password</h5></label>
                         <input type="password" class="form-control" id="editUserPassword" required>
@@ -265,7 +265,7 @@
                         <br>
                         <label for="deleteUserVkId" class="form-label"><h5>Vk id</h5></label>
                         <fieldset disabled>
-                            <input type="text" class="form-control" id="deleteUserVkId">
+                            <input type="number" class="form-control" id="deleteUserVkId">
                         </fieldset>
                         <br>
                         <label for="deleteUserRole"><h5>Role</h5></label>
